--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="intro-text">
         <h1>Front-End<span>/</span>Back-End Developer</h1>
         <p>
-          Hello World! I'm currently learning how to develope front-end and
+          Hello World! I'm currently learning how to develop front-end and
           back-end applications. From <strong>Brazil</strong> to the
           <strong>world </strong> :)
         </p>
