--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>
           Education should <strong>always</strong> be a priority to all of us,
           and I have been through a couple of courses in different areas that
-          made who am I. Here you can get access to this information.
+          made who am I. Here you can get access to those informations.
         </p>
       </div>
       <div class="education-courses-pink">
@@ -69,7 +69,7 @@
       </div>
       <div class="education-courses-pink">
         <span>2022</span>
-        <h3>Analytics and development of Systems</h3>
+        <h3>Analysis and development of Systems</h3>
         <p>UAM - Anhembi Morumbi University</p>
       </div>
     </div>
@@ -79,9 +79,9 @@
       <h2 class="subtitle">EXPERIENCE</h2>
       <div class="experience-secondblock">
         <p class="experience-conteiner-text">
-          Here are some of my working experiences that make who I am as a
-          professional. Even experiences that not necessarily has something to
-          do with technology is an experience that differ me from other
+          Here are some of my working experiences that made who I am as a
+          professional. Even experiences that not necessarily have something to
+          do with technology are experiences that differ me from other
           professionals.
         </p>
         <ul class="job-experience">
@@ -90,11 +90,11 @@
             <span class="job-year">2022 - Currently</span>
             <p class="job-description">
               In this position I was able to get access to different technologies and programmers, being then an
-              stratigic position for getting to know how the tech industry behaves and what is the newest movients in
+              stratigic position for getting to know how the tech industry behaves and what is the newest moviments in
               it.
               <br>
               As a Tech Recruiter I had to recruit and select people for tech positions but also, using all I know as a
-              front dev, I was in charge of developmenting hotsites and changing elements of internal pages for
+              front dev, I was in charge of developing hotsites and changing elements of internal pages for
               recruiting.
             </p>
           </li>
